maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
  setIndication(3, 8)
               ^