maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  setIndication(3, 8)
  /*var compteur = 0
  for(i<- 0 to getMondeLargeur()-1)
  {
    for(j<- 0 to getMondeHauteur()-1)
    {
      setIndication(i, j, compteur)
      compteur += 1
    }
  }*/
  marquerCases()
}

def marquerCases()
{
	var (h, l) = (getMondeHauteur(), getMondeLargeur())
  
  
  for(x<- 0 to l-1) //Ces boucles permettent de noter 0 sur la case du Baggle
  {
    for(y<- 0 to h-1)
    {
      if (aBiscuit(x, y))
      {
        setIndication(x, y, 0)
      }
    }
  }
  
  var compteur = 0
  var (xBuggle, yBuggle) = (getX(), getY())
  while(getIndication(xBuggle, yBuggle) == 9999) //Tant que le marquage n'atteint pas le Buggle
  
  {
    for (x<- 0 to l-1) // On boucle sur les cases du Monde
    {
      for (y<- 0 to h-1)
      {
        if (getIndication(x, y) == compteur)
        {
          marquerAutour(x, y)
        }
      }
    }
    compteur += 1
  }
}
  
  

def aMurEst(x:Int, y:Int) : Boolean =
  {
    var (h, l) = (getMondeHauteur(), getMondeLargeur())
    if (x == l-2)
    	return true
    else 
    	return aMurOuest(x+1, y)
  }
  
def aMurSud(x:Int, y:Int) : Boolean =
  {
    if (y == 1)
    	return true
    else
    	return aMurNord(x, y-1)
  }

def marquerAutour(x:Int, y:Int)
{
  if (!aMurOuest(x, y) && getIndication(x-1, y) == 9999)
   	setIndication(x-1, y, getIndication(x, y) + 1) 
    
  if (!aMurNord(x, y) && getIndication(x, y+1) == 9999)
   	setIndication(x, y+1, getIndication(x, y) + 1) 
        
  if (!aMurSud(x, y) && getIndication(x, y-1) == 9999)
   	setIndication(x, y-1, getIndication(x, y) + 1) 
          
  if (!aMurEst(x, y) && getIndication(x+1, y) == 9999)
   	setIndication(x+1, y, getIndication(x, y) + 1) 
}